2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Track assembly lookup APIs.

2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs\FileSelectorDialog.cs: Fix gtk
	  warning.

	* MonoDevelop.Ide.Gui\DragNotebook.cs: For some reason
	  Pointer.IsGrabbed always returns false on windows.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Fix location of the formatting
	  policies panel in the policies dialog.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.Gui/ViewContentEventHandler.cs: Removed
	  unused file.

2009-06-09  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Ide.Commands\FileCommands.cs: Rewritten from scratch to make it non-GPL.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.CodeFormatting/CodeFormattingCommands.cs:
	* MonoDevelop.Ide.CodeFormatting/CodeFormattingPolicyPanelWidget.cs:
	  Add support for per-mimetype policies.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Track api changes.

	* MonoDevelop.Ide.Gui.OptionPanels/TextStylePolicyPanel.cs:
	  Use the new dialog for mime-type formatting policies.

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs:
	* gtk-gui/MonoDevelop.Ide.OverridesImplementsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* gtk-gui/MonoDevelop.Ide.CodeFormatting.OverrideTextSettingsPolicyWidget.cs:
	  Removed unused dialog.

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.CodeFormatting/MonoTextStylePolicy.xml: